Update GitHub link to new repository URL

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <button class="btn btn-secondary" onclick="shareScore()" id="shareBtn">
                         📤 Share Score
                     </button>
-                    <a href="https://github.com/yourusername/aether-verification" class="btn btn-ghost">
+                    <a href=" https://porcupineai.github.io/aether-score-verification/" class="btn btn-ghost">
                         ⭐ Star on GitHub
                     </a>
                 </div>
