--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
 
                 <div class="actions">
-                    <a href="https://your-canva-link.com" class="btn btn-primary" id="getScoreBtn">
+                    <a href="https://www.canva.com/design/DAG6ozR2wyE/95gJOViqVc4sCiY8G62Pvg/edit?utm_content=DAG6ozR2wyE&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="btn btn-primary" id="getScoreBtn">
                         🚀 Get Your Score
                     </a>
                     <button class="btn btn-secondary" onclick="shareScore()" id="shareBtn">
